--- a/src/components/imageslide/style.css
+++ b/src/components/imageslide/style.css
@@ -8,12 +8,8 @@
 .slide {
   /* background-color: #515151; */
   align-items: center;
- 
-  transition: transform 1s;
 }
-.slide:hover{
-  transform: scale(1.05);
-}
+
 .description {
   margin-top: 20px;
   font-size: 2rem;
@@ -24,6 +20,7 @@
 
 
 .carousel {
+  margin-top: -50px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -41,6 +38,8 @@
 
 .slide-hidden {
   display: none;
+  pointer-events: none;
+  transition: opacity 1s ease-in-out;
 }
 
 .arrow {
@@ -61,9 +60,9 @@
 }
 
 .arrow-right {
-  right: 1rem;
+  left: 28.5rem; /* Adjusted from "right: 5rem;" to "left: 5rem;" */
   align-self: center;
-  margin-left: 100px;
+  margin-left: 50px;
   position: absolute;
 }
 
@@ -71,11 +70,11 @@
 .indicators {
   display: flex;
   position: absolute;
-  bottom: -2rem!important;
   height: 10px!important;
   width: 10px!important;
   justify-content: center;
   align-items: center;
+    
 }
 
 .indicator {
