--- a/src/pages/activities/style.css
+++ b/src/pages/activities/style.css
@@ -15,7 +15,16 @@
   width: 50% !important;
   height: auto !important;
   /* border-radius: 10px !important; */
-  transition: transform 0.5s ease-in-out; /* Adding a smooth transition effect */
+  transform:
+    perspective(750px)
+    translate3d(0px, 0px, -50px)
+    rotateX(27deg)
+    scale(0.9, 0.9);
+  /* border-radius: 20px; */
+  border: 5px var(--secondary-color) solid;
+  border-bottom: 20px var(--secondary-color) solid;
+  box-shadow: 0 70px 40px -20px rgba(0, 0, 0, 0.2);
+  transition: 0.4s ease-in-out transform; /* Adding a smooth transition effect */
 }
 /* .imageactive.black-and-white {
   filter: grayscale(100%)!important;
@@ -24,8 +33,8 @@
 
 
 .imageactive:hover {
-  transform: scale(1.05) !important; /* Removing single quotes around '180deg' */
-  box-shadow: 0px 0px 10px 0px var(--secondary-color);
+  transform: translate3d(0px, 0px, -250px) !important; /* Removing single quotes around '180deg' */
+  /* box-shadow: 0px 0px 10px 0px var(--secondary-color); */
 }
 
 .textactive {
