--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -7,27 +7,30 @@ section {
     transition: all .5s ease-in;
 }
 /* Add or modify these styles in your CSS file */
+/* Add or modify these styles in your CSS file */
 
 .image-slider img {
     margin: top 0.5rem bottom 0.5rem!important;
-  opacity: 0;
-  transition: transform 0.7s ease-in-out, opacity 0.7s ease-in-out;
-  transform: translateX(100%); /* Adjust for desired starting position */
+    opacity: 0;
+    transition: transform 0.7s ease-in-out, opacity 0.7s ease-in-out;
+    transform: translateX(100%);
 }
 
 .image-slider img.visible {
-margin: top 0.5rem bottom 0.5rem!important;
-  opacity: 1;
-  transform: translateX(0%);
-  transition: transform 0.7s ease-in-out, opacity 0.7s ease-in-out;
+    opacity: 1;
+    transform: translateX(0%);
+    transition: transform 0.7s ease-in-out, opacity 0.7s ease-in-out;
 }
 
 .image-slider img.hidden {
-  opacity: 0; /* Set opacity for leaving images */
-  transform: translateX(100%) ; /* Set the transformation for leaving images */
-  transition: transform 0.7s ease-in-out, opacity 0.7s ease-in-out;
-  display: none;
+    opacity: 0;
+    transform: translateX(100%);
+    transition: transform 0.7s ease-in-out, opacity 0.7s ease-in-out;
+    display: none;
 }
+
+
+
 
 .home-image img:hover {
   transform: translateX(-10%); /* Set the new transformation on hover (you can customize this) */
