--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -25,7 +25,7 @@ section {
 
 .image-slider img.hidden {
     opacity: 0;
-    transform: translateX(100%);
+    /* transform: translateX(100%); */
     transition: transform 1s ease-in-out, opacity 1s ease-in-out;
     /* display: none; */
 }
