--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -14,7 +14,7 @@ section {
     margin: top 0.5rem bottom 0.5rem !important;
     opacity: 0;
     transition: transform 0.7s ease-in-out, opacity 0.7s ease-in-out;
-    transform: translateX(100%);
+    /* transform: translateX(100%); */
 }
 
 .image-slider img.visible {
