--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -19,23 +19,12 @@ section {
 
 .image-slider img.visible {
     opacity: 1;
-    transform: translateX(0%);
     transition: transform 0.7s ease-in-out, opacity 0.7s ease-in-out;
 }
 
 .image-slider img.hidden {
     opacity: 0;
-    /* transform: translateX(100%); */
-    transition: transform 1s ease-in-out, opacity 1s ease-in-out;
-    /* display: none; */
-}
-
-
-
-
-.home-image img:hover {
-    transform: translateX(-10%);
-    /* Set the new transformation on hover (you can customize this) */
+    transition:  opacity 1s ease-in-out;
 }
 
 .who_am_I {
