--- a/src/components/imageslide/style.css
+++ b/src/components/imageslide/style.css
@@ -1,4 +1,3 @@
-
 .carousel-content {
   width: 100%;
   display: flex;
@@ -8,20 +7,22 @@
 .slide {
   /* background-color: #515151; */
   align-items: center;
-  transition: ease-in-out 1s;
+  /* transition: ease-in-out 1s; */
 }
+
 .slide:hover {
-  transform: scale(1.05);
-  transition: ease-in-out 1s;
+  /* transform: scale(1.05); */
+  /* transition: ease-in-out 1s; */
 }
 
 .description {
   margin-top: 20px;
   font-size: 2rem;
-  padding-top: 20px; /* Adjusted padding */
+  padding-top: 20px;
+  /* Adjusted padding */
   text-align: center;
   font-weight: 400;
-  font-family: 'Raleway', sans-serif!important;
+  font-family: 'Raleway', sans-serif !important;
 }
 
 
@@ -41,8 +42,8 @@
   object-fit: cover;
   border: 5px var(--secondary-color) solid;
   border-bottom: 20px var(--secondary-color) solid;
-  
- 
+
+
 }
 
 .slide-hidden {
@@ -66,7 +67,7 @@
 .arrow-left {
   left: 1rem;
   position: absolute;
-  
+
 }
 
 .arrow-right {
@@ -78,11 +79,11 @@
 .indicators {
   display: flex;
   position: absolute;
-  height: 10px!important;
-  width: 10px!important;
+  height: 10px !important;
+  width: 10px !important;
   justify-content: center;
   align-items: center;
-    
+
 }
 
 .indicator {
@@ -93,7 +94,8 @@
   border: none; */
   outline: none;
   box-shadow: 0px 0px 8px #555;
-  margin: 0 4px; /* Adjust the space between indicators */
+  margin: 0 4px;
+  /* Adjust the space between indicators */
   cursor: pointer;
 }
 
