--- a/src/pages/about/style.css
+++ b/src/pages/about/style.css
@@ -2,10 +2,36 @@
     margin-top: 10px;
 }
 
-.backgroundvideo {
-    background-size: cover;
-    background-position: center;
-    backdrop-filter: blur(15px);
+/* CSS */
+.backgroundvideo img {
+    width: 100%;
+    /* Corrected from auto% to 100% */
+    height: 100%;
+    /* This makes the image take the full height of its container */
+}
+
+@media (max-width: 768px) {
+    .backgroundvideo img {
+        height: 100vh;
+        /* This makes the image take the full height of the viewport */
+        object-fit: cover;
+        /* Ensures the image covers the area without distortion */
+    }
+}
+
+.backgroundvideo img {
+    width: 100%;
+    /* Ensure the image covers the full width */
+    height: auto;
+    /* Maintain the image's aspect ratio */
+    object-fit: cover;
+    /* Cover the full area of the container without distortion */
+}
+
+@media (max-width: 768px) {
+    .backgroundvideo img {
+        display: none;
+    }
 }
 
 .table td,
