--- a/src/pages/about/style.css
+++ b/src/pages/about/style.css
@@ -24,6 +24,10 @@
         object-fit: cover;
         /* Ensures the image covers the area without distortion */
     }
+
+    .grain {
+        display: block;
+    }
 }
 
 
