--- a/src/pages/activities/style.css
+++ b/src/pages/activities/style.css
@@ -25,8 +25,15 @@
   align-items: center !important;
   justify-content: center !important;
   display: flex;
+  width: 100%;
+}
+.carousel-control-next {
+  right: -150px;
 }
 
+.carousel-control-prev {
+  left: -150px;
+}
 .carouseltext {
   font-size: 30px;
   text-align: center;
@@ -58,23 +65,26 @@
   .textactive {
     font-size: 15px !important;
   }
+    .carousel-control-next {
+      right: -50px;
+    }
+  
+    .carousel-control-prev {
+      left: -50px;
+    }
 }
 
 /* Adjust the image size to be responsive */
 .imageactive {
   width: 100%;
   height: auto;
-  max-height: 550px;
+  max-height: 400px;
   border: 5px var(--secondary-color) solid;
   border-bottom: 30px var(--secondary-color) solid;
   box-shadow: 0 70px 40px -20px rgba(0, 0, 0, 0.2);
 
 }
 
-/* .imageactive.black-and-white {
-  filter: grayscale(100%)!important;
-  filter: contrast(1.2) grayscale(100%) !important;
-} */
 .textactive {
   font-size: 25px;
   font-family: 'Raleway', sans-serif !important;
