Update carousel controls position and image size

--- a/src/pages/recruitment/style.css
+++ b/src/pages/recruitment/style.css
@@ -172,7 +172,12 @@
     .overlay-image2 {
         display: none;
     }
+
+    .qrcode {
+        max-width: 100px;
+    }
 }
+
 
 .rightcol {
     align-items: center;
