--- a/src/pages/traditionroom/style.css
+++ b/src/pages/traditionroom/style.css
@@ -2,6 +2,11 @@
     margin-top: 10px;
 }
 
+.container {
+    align-items: center;
+    text-align: center;
+}
+
 .prize {
     margin-top: 10px;
     text-align: center;
@@ -60,8 +65,7 @@
 .carouselroom .carousel-caption p,
 .carouselroom .carousel-caption h4 {
     color: #ffffff;
-    /* display: flex; */
-    text-align: left ;
+    text-align: left;
     margin-left: 0px;
 }
 
@@ -73,127 +77,46 @@
     /* This makes the image take the full height of its container */
 }
 
-@media (max-width: 768px) {
-    .backgroundvideo img {
-        height: 100vh;
-        /* This makes the image take the full height of the viewport */
-        object-fit: cover;
-        /* Ensures the image covers the area without distortion */
-    }
-
+@media (max-width: 986px) {
     .carousel-caption p {
         display: none;
     }
 }
 
-.backgroundvideo img {
-    width: 100%;
-    /* Ensure the image covers the full width */
-    height: auto;
-    /* Maintain the image's aspect ratio */
-    object-fit: cover;
-    /* Cover the full area of the container without distortion */
-}
-
 @media (max-width: 768px) {
     .backgroundvideo img {
         display: none;
     }
-}
 
-.table td,
-.table th {
-    color: var(--text-color);
-}
-
-.t_border {
-    border-color: var(--text-color) !important;
-}
-
-.progress-title {
-    font-size: 16px;
-    font-weight: 700;
-    font-family: 'Raleway';
-}
-
-.progress {
-    height: 5px;
-    background: var(--secondary);
-    border-radius: 0;
-    box-shadow: none;
-    margin-bottom: 30px;
-    overflow: visible;
-}
-
-.progress .progress-bar {
-    position: relative;
-    background: var(--text-color);
-    animation: animate-positive 2s;
-    overflow: visible;
-    opacity: 0.9;
-}
-
-.progress .progress-value {
-    position: absolute;
-    right: 8px;
-    font-size: 17px;
-    font-weight: bold;
-    font-style: italic;
-    color: var(--text-color);
-}
-
-@-webkit-keyframes animate-positive {
-    0% {
-        width: 0%;
-    }
-}
-
-@keyframes animate-positive {
-    0% {
-        width: 0%;
-    }
-}
-
-.section-title {
-    font-size: 45px;
-}
-
-.service__title {
-
-    border-bottom: solid 2px var(--secondary-color);
-}
-
-.service-section .service-category-title {}
-
-
-/*! CSS Used keyframes */
-
-@-webkit-keyframes fadeInUp {
-    0% {
-        opacity: 0;
-        -webkit-transform: translate3d(0, 100%, 0);
-        transform: translate3d(0, 100%, 0);
+    .row {
+        display: block;
     }
 
-    to {
-        opacity: 1;
-        -webkit-transform: translateZ(0);
-        transform: translateZ(0);
-    }
-}
-
-@keyframes fadeInUp {
-    0% {
-        opacity: 0;
-        -webkit-transform: translate3d(0, 100%, 0);
-        transform: translate3d(0, 100%, 0);
+    .carousel-caption {
+        margin-top: 30px;
+        padding: 0px;
+        margin-right: 0px;
     }
 
-    to {
-        opacity: 1;
-        -webkit-transform: translateZ(0);
-        transform: translateZ(0);
+
+
+    .carousel-caption h3 {
+        font-size: 20px;
     }
+
+    .carousel-caption h4 {
+        font-size: 15px;
+    }
+
+
+    .carouselroom .carousel-caption h3,
+    .carouselroom .carousel-caption p,
+    .carouselroom .carousel-caption h4 {
+        color: #ffffff;
+        text-align: center;
+        margin-left: 20px;
+    }
+
 }
 
 .grain {
@@ -205,7 +128,7 @@
     pointer-event: none;
     z-index: -1;
     transform: translateZ(0);
-    
+
     &:before {
         content: "";
         top: -10rem;
