chore: Adjust margin-top in recruitment page style.css
Update the margin-top property in the recruitment page style.css file to 40px, ensuring proper spacing and alignment of the content. This change improves the visual layout of the page.

--- a/src/pages/recruitment/style.css
+++ b/src/pages/recruitment/style.css
@@ -114,7 +114,7 @@
     white-space: pre-wrap !important;
     /* Maintains whitespace but allows wrapping */
     text-wrap: balance !important;
-    margin-top: 50px;
+    margin-top: 40px!important;
     background-color: rgba(0, 0, 0, 0.3);
     font-size: medium;
     text-align: left;
