--- a/src/pages/portfolio/style.css
+++ b/src/pages/portfolio/style.css
@@ -78,3 +78,30 @@
 .po_item .content a:hover {
     text-decoration: none;
 }
+
+@keyframes slideUp {
+    0% {
+        transform: translateY(100%);
+        opacity: 0;
+    }
+
+    20% {
+        transform: translateY(80%);
+        opacity: 0.2;
+    }
+
+    50% {
+        transform: translateY(50%);
+        opacity: 0.5;
+    }
+
+
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+.slideUp {
+    animation: slideUp 1s ease;
+}
