--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -63,7 +63,7 @@ section {
 
 .intro_sec {
     height: calc(100vh - 60px);
-    min-height: 700px;
+    /* min-height: 700px; */
     height: 100vh;
     margin-top: -60px;
 }
