--- a/src/components/focusring/focusring.css
+++ b/src/components/focusring/focusring.css
@@ -1,31 +1,24 @@
 .focus-ring-container {
     position: fixed;
+    z-index: 1000;
+    pointer-events: none;
     bottom: 0;
-    right: 0;
-    margin-bottom: 1%;
-    margin-right: 1%;
-    width: 4%;
-    height: auto;
-    z-index: 9999;
-    /* Full viewport height */
+    left: 0;
+    width: 100%;
+    margin-bottom: 10px;
+    margin-left: 10px;
 }
 
 .focus-ring {
-    width: 150px;
-    /* Adjust the size of the ring */
-    height: 150px;
+    width: 4%;
+    height: auto;
     transform-origin: center;
     transform: rotate(0deg);
     transition: transform 0.1s linear;
 }
 
 @media screen and (max-width: 768px) {
-    .focus-ring-container {
-        width: 10%;
-        height: auto;
-        margin-bottom: 3%;
-        margin-right: 3%;
-        z-index: 9999;
+    .focus-ring {
+        width: 8%;
     }
-
 }
