--- a/src/pages/traditionroom/style.css
+++ b/src/pages/traditionroom/style.css
@@ -70,6 +70,8 @@
 /* CSS */
 .backgroundvideo img {
     width: 100%;
+   
+    filter: brightness(80%);
     /* Corrected from auto% to 100% */
     /* This makes the image take the full height of its container */
 }
