--- a/src/components/preload/style.css
+++ b/src/components/preload/style.css
@@ -5,19 +5,55 @@
     width: 100%;
     height: 100%;
     z-index: 999999;
-    background-color: #151515;
-    background-image: url(../../assets/preload.gif);
-    background-repeat: no-repeat;
-    background-position: center;
+    background-color: #191919;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 
 }
 
 #preloader-none {
+    display: none;
     opacity: 0;
 }
 
-@media screen and (max-width: 768px) {
-    #preloader {
-        background-image: url(../../assets/spinner.svg);
+.text-line {
+    stroke-dasharray: 500;
+    stroke-dashoffset: 500;
+    animation: dash 2s linear forwards, filling 2s ease-in forwards;
+    font-size: 80px;
+}
+
+.text-line text {
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: normal;
+    font-style: normal;
+}
+
+@keyframes dash {
+    to {
+        stroke-dashoffset: 0;
     }
+}
+
+@keyframes filling {
+
+    0%,
+    90% {
+        fill: #FFFFFF;
+        fill-opacity: 0;
+    }
+
+    100% {
+        fill: #FFFFFF;
+        fill-opacity: 1;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .text-line {
+        font-size: 40px;
+    }
+
 }
