--- a/src/components/preload/style.css
+++ b/src/components/preload/style.css
@@ -5,7 +5,7 @@
     width: 100%;
     height: 100%;
     z-index: 999999;
-    background-color: #191919;
+    background-color: #000000;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -21,9 +21,10 @@
 .text-line {
     stroke-dasharray: 500;
     stroke-dashoffset: 500;
-    animation: dash 2s linear forwards, filling 2s ease-in forwards;
+    animation: dash 2s linear forwards, filling 2s linear forwards, glow 2s ease-in 1s;
     font-size: 80px;
 }
+
 
 .text-line text {
     font-family: "Poppins", sans-serif;
@@ -58,6 +59,16 @@
     100% {
         fill: #FFFFFF;
         fill-opacity: 1;
+    }
+}
+
+@keyframes glow {
+    from {
+        text-shadow: 0;
+    }
+
+    to {
+        text-shadow: 0 0 20px #fff;
     }
 }
 
