chore: Add lazy loading for project images
Update the code to import project images with lazy loading attributes. This change enables lazy loading of project images, improving page load performance by deferring the loading of images until they are needed. This results in faster initial page load and reduced data usage for users.

--- a/src/pages/portfolio/style.css
+++ b/src/pages/portfolio/style.css
@@ -73,10 +73,12 @@
     padding: 4px 8px;
     text-align: center;
     font-size: 1rem;
+    text-decoration: none;
 }
 
 .po_item .content a:hover {
-    text-decoration: none;
+    background: var(--text-color);
+    color: var(--bg-color);
 }
 
 @keyframes slideUp {
