chore: Update image loading attribute for lazy loading
Enable lazy loading of images by updating the image loading attribute to "lazy" in multiple files. This improves page load performance by deferring the loading of images until they are needed, resulting in faster initial page load and reduced data usage for users.

--- a/src/pages/about/style.css
+++ b/src/pages/about/style.css
@@ -10,12 +10,7 @@
 }
 
 /* CSS */
-.backgroundvideo img {
-    width: 100%;
-    /* Corrected from auto% to 100% */
 
-    /* This makes the image take the full height of its container */
-}
 
 @media (max-width: 768px) {
     .backgroundvideo img {
@@ -38,6 +33,8 @@
     height: 100%;
     /* Maintain the image's aspect ratio */
     object-fit: cover;
+    filter: brightness(60%);
+
     /* Cover the full area of the container without distortion */
 }
 
