--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -93,6 +93,16 @@ section {
     margin: 0 auto;
 }
 
+.breakword {
+    word-wrap: break-word !important;
+    /* Correct property for breaking long words */
+    overflow-wrap: break-word !important;
+    /* Ensures words break to prevent overflow */
+    white-space: pre-wrap !important;
+    /* Maintains whitespace but allows wrapping */
+    text-wrap: balance !important;
+}
+
 @media (max-width:991.98px) {
     .intro_sec .intro {
         max-width: 700px;
