Refactor content_option.js to add Nguyen Minh Duc to the list of humans

--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -94,6 +94,7 @@ section {
 }
 
 .breakword {
+    display: inline-block;
     word-wrap: break-word !important;
     /* Correct property for breaking long words */
     overflow-wrap: break-word !important;
